# osmosispy

./: .gitignore  Makefile  README.md  __init__.py.bak  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml
examples/: binance_integration.ipynb  connect.ipynb  trading_client.ipynb
osmosis_proto/: __init__.py
osmosis_proto/home/denis/go/: __init__.py
osmosis_proto/proto/confio/: proofs_pb2.pyi
osmosis_proto/proto/cosmos/: __init__.py
osmosis_proto/proto/cosmos/authz/: __init__.py
osmosis_proto/proto/cosmos/bank/: __init__.py
osmosis_proto/proto/cosmos/base/: __init__.py
osmosis_proto/proto/cosmos/crisis/: __init__.py
osmosis_proto/proto/cosmos/distribution/: __init__.py
osmosis_proto/proto/cosmos/evidence/: __init__.py
osmosis_proto/proto/cosmos/genutil/: __init__.py
osmosis_proto/proto/cosmos/params/: __init__.py
osmosis_proto/proto/cosmos_proto/: cosmos_pb2.pyi
osmosis_proto/proto/gogoproto/: __init__.py  gogo_pb2.pyi  gogo_pb2_grpc.pyi
osmosis_proto/proto/osmosis/: __init__.py
osmosispy/: __init__.py  event_specs.py  exceptions.py  grpc_client.py  sdk.py  trading_client.py  tx.py  utils.py  wallet.py
osmosispy/home/: __init__.py
osmosispy/home/denis/: __init__.py
osmosispy/proto/confio/: __init__.py
osmosispy/proto/cosmos/auth/: __init__.py
osmosispy/proto/cosmos_proto/: __init__.py
osmosispy/proto/google_apis/: __init__.py
osmosispy/proto/tendermint/: __init__.py
osmosispy/pytypes/: __init__.py  common.py  event.py  network.py  tx_resp.py
osmosispy/trading_client/: __init__.py  binance.py  client.py  osmosis.py  trade_data.py  types.py
scripts/: init-py.py  proto-gen-py.sh  proto-gen.sh
(+472 files in other folders)
