[tool.poetry]
name = "osmosispy"
version = "0.0.5"
description = "Osmosis Python SDK"
packages = [
    { include = "osmosispy" },
    { include = "osmosis_proto" },
]
authors = ["sbneo2022"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.2"
grpcio = "1.51.1"
grpcio-tools = "1.51.1"
protobuf = "4.21.12"
types-protobuf = "4.21.0.2"
mypy-protobuf = "3.4.0"
bech32 = "1.2.0"
asyncio = "3.4.3"
protobuf-init = "0.3.0"
requests = "2.28.2"
bip32 = "3.4"
ecdsa = "0.18.0"
mnemonic = "0.20"
importlib = "1.0.4"
setuptools = "^67.6.0"

[tool.poetry.dev-dependencies]
black = "22.6.0"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '.*\.pyi?$'
target-version = ['py311']
extend-exclude = '''
^/(
    \.vscode
  | osmosis_proto
)$
'''